--- a/src/main/resources/templates/autor.html
+++ b/src/main/resources/templates/autor.html
@@ -12,6 +12,7 @@
     <p th:text="${autor.edad}">edad</tpd>
     <p th:text="${autor.email}">email</p>
 
+	<p><a href="#" th:href="@{/autores}">Volver a la lista de autores</a></p>
 </body>
 </html>
 
