--- a/src/main/resources/templates/hola.html
+++ b/src/main/resources/templates/hola.html
@@ -6,6 +6,7 @@
 	
 	<body>
 	<h1 th:text="#{hola.title}">Bienvenido aquí una lista de autores</h1>
+	<p>Hay <span th:text="${autores.size()}"></span> autores</p>
 
     <table border="1">
       <tr>
@@ -25,6 +26,8 @@
         <td><a href="#" th:href="@{/eliminarAutor/{id}(id=${autor.id})}">Eliminar</a></td>
       </tr>
     </table>
+	
+	<p><a href="#" th:href="@{/nuevoAutor}">Nuevo Autor</a></p>
 	
 	</body>
 </html>
