Formulario con un select

--- a/src/main/resources/templates/nuevoAutor.html
+++ b/src/main/resources/templates/nuevoAutor.html
@@ -10,10 +10,17 @@
     <form action="#" th:action="@{/addAutor}" th:object="${autor}" method="post">
     	
     	<p>Nombre: <input type="text" th:field="*{nombre}"/></p>
-        <p>Edad: <input type="number" placeholder="inserta una edad" th:field="*{edad}"/></p>
+        <p>Edad: <input type="number" th:field="*{edad}"  placeholder="inserta una edad"/></p>
         <p>Email: <input type="email" th:field="*{email}"/></p>
         
-        <p>	<input type="submit" value="Submit" /> 
+        <p>
+			<select th:field="*{coche}">
+			  <option th:each="cocheOpt:${coches}" th:value="${cocheOpt.id}" th:text="${cocheOpt.marca}">Mercedes</option>
+			</select>        
+        </p>
+       
+        <p>	
+        	<input type="submit" value="Submit" /> 
         	<input type="reset" value="Reset" />
         </p>
     </form>
