--- a/src/main/resources/templates/hola.html
+++ b/src/main/resources/templates/hola.html
@@ -14,6 +14,7 @@
         <th>Nombre</th>
         <th>edad</th>
         <th>email</th>
+        <th>coche</th>
         <th></th>
         <th></th>
         <th></th>
@@ -23,6 +24,7 @@
         <td th:text="${autor.nombre}"></td>
         <td th:text="${autor.edad}">2.41</td>
         <td th:text="${autor.email}">yes</td>
+        <td th:text="${autor.coche}">Mercedes</td>
         <td><a href="#" th:href="@{/autores/{id}(id=${autor.id})}">Detalle</a></td>
         <td><a href="#" th:href="@{/eliminarAutor/{id}(id=${autor.id})}">Eliminar</a></td>
         <td><a href="#" th:href="@{/editarAutor/{id}(id=${autor.id})}">Editar</a></td>
