mensagges.properties cambiados

--- a/src/main/resources/templates/hola.html
+++ b/src/main/resources/templates/hola.html
@@ -10,7 +10,7 @@
 
     <table border="1">
       <tr>
-        <th th:text="#{hola.id}">ID</th>
+        <th th:text="#{hola.tabla.id}">ID</th>
         <th>Nombre</th>
         <th>edad</th>
         <th>email</th>
@@ -24,7 +24,7 @@
         <td th:text="${autor.nombre}"></td>
         <td th:text="${autor.edad}">2.41</td>
         <td th:text="${autor.email}">yes</td>
-        <td th:text="${autor.coche}">Mercedes</td>
+        <td th:each="coche:${coches}" th:if="${coche.id}==${autor.coche}" th:text="${coche.marca}">Mercedes</td>
         <td><a href="#" th:href="@{/autores/{id}(id=${autor.id})}">Detalle</a></td>
         <td><a href="#" th:href="@{/eliminarAutor/{id}(id=${autor.id})}">Eliminar</a></td>
         <td><a href="#" th:href="@{/editarAutor/{id}(id=${autor.id})}">Editar</a></td>
