--- a/src/main/resources/templates/nuevoAutor.html
+++ b/src/main/resources/templates/nuevoAutor.html
@@ -18,6 +18,21 @@
 			  <option th:each="cocheOpt:${coches}" th:value="${cocheOpt.id}" th:text="${cocheOpt.marca}">Mercedes</option>
 			</select>        
         </p>
+        
+      	<p>
+	        <textarea th:field="*{mensaje}" rows="6" cols="20">
+				The cat was playing in the garden.
+			</textarea>
+        </p>        
+       
+       
+          <p>
+	        <input type="range" th:field="*{puntuacion}" min="0" max="10">
+        </p>     
+ 
+         <p>
+	        <input type="checkbox" th:field="*{carnet}"> Carnet
+        </p>      
        
         <p>	
         	<input type="submit" value="Submit" /> 
